syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.explorviz.persistence.proto";
option java_outer_classname = "CommitReport";

import "google/protobuf/empty.proto";

service CommitReportService {
  rpc sendCommitReport (CommitReportData) returns (google.protobuf.Empty) {}
}

message  CommitReportData {
  string commitID = 1;
  string parentCommitID = 2;
  string branchName = 3;
  repeated string files = 4;
  repeated string modified = 5;
  repeated string deleted = 6;
  repeated string added = 7;
  repeated FileMetric fileMetric = 8;
  repeated string tags = 9;
  string landscapeToken = 10;
  string applicationName = 11;
  repeated string fileHash = 12;
  string repositoryName = 13;
}

message FileMetric {
  string fileName = 1;
  int32 fileSize = 2;
  int32 loc = 3; // Lines of code incl. whitespace and comments
  int32 cloc = 4; // Comment lines of code
  int32 cyclomaticComplexity = 5;
  int32 numberOfMethods = 6;
}
